# rustcloak

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/core/: Cargo.toml
crates/core/src/: clone.rs  engine.rs  ext.rs  geo.rs  launch.rs  lib.rs  maintenance.rs  model.rs  paths.rs  proxy.rs  seed.rs  store.rs  update.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: CloneModal.svelte  Onboarding.svelte  ProfileList.svelte  ProfileModal.svelte  SettingsModal.svelte  UpdateBanner.svelte  api.ts  geodata.ts
src/routes/: +page.svelte
