[package]
name = "rustcloak_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", features = ["json", "socks"] }
tokio = { workspace = true }
zip = "2"
dirs = "5"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
